# sdrangelove

./: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  osdrupgrade.cpp  osdrupgrade.h  osdrupgrade.ui  preset.cpp  preset.h  sdrangelove.pro  settings.cpp  settings.h
cmake/Modules/: FindFFTS.cmake  FindGnuradioOsmosdr.cmake  FindPortaudio.cmake
dsp/: channelizer.cpp  channelizer.h  dspcommands.cpp  dspcommands.h  dspengine.cpp  dspengine.h  dsptypes.h  fftengine.cpp  fftengine.h  fftwengine.cpp  fftwengine.h  fftwindow.cpp  fftwindow.h  interpolator.cpp  interpolator.h  inthalfbandfilter.cpp  inthalfbandfilter.h  kissengine.cpp  kissengine.h  kissfft.h  lowpass.cpp  lowpass.h  nco.cpp  nco.h  nfmdemod.cpp  nfmdemod.h  pidcontroller.h  samplesink.cpp  samplesink.h  scopevis.cpp  scopevis.h  spectrum.cpp  spectrum.h  spectrumvis.cpp  spectrumvis.h
gui/: glscope.cpp  glscope.h  glspectrum.cpp  glspectrum.h  indicator.cpp  indicator.h  presetitem.cpp  presetitem.h  scale.cpp  scale.h  scalecalc.cpp  scalecalc.h  scaleengine.cpp  scaleengine.h  scope.cpp  scope.h  scopewindow.cpp  scopewindow.h  scopewindow.ui  spectrohistogram.cpp  spectrohistogram.h  valuedial.cpp  valuedial.h  viewtoolbox.cpp  viewtoolbox.h  viewtoolbox.ui  waterfall.cpp  waterfall.h
hardware/: audiofifo.cpp  audiofifo.h  audiooutput.cpp  audiooutput.h  osmosdrgui.cpp  osmosdrgui.h  osmosdrgui.ui  osmosdrinput.cpp  osmosdrinput.h  osmosdrthread.cpp  osmosdrthread.h  samplefifo.cpp  samplefifo.h  samplesource.cpp  samplesource.h  samplesourcegui.cpp  samplesourcegui.h  soundcardinfo.cpp  soundcardinfo.h
hardware/osmosdr/: osmosdrgui.cpp  osmosdrgui.h  osmosdrinput.cpp  osmosdrinput.h  osmosdrthread.cpp  osmosdrthread.h  osmosdrupgrade.cpp  osmosdrupgrade.h
hardware/rtlsdr/: rtlsdrgui.cpp  rtlsdrgui.h  rtlsdrgui.ui  rtlsdrinput.cpp  rtlsdrinput.h  rtlsdrthread.cpp  rtlsdrthread.h
include-gpl/: mainwindow.h
include-gpl/audio/: audiodeviceinfo.h  audiofifo.h  audiooutput.h  portaudioholder.h
include-gpl/dsp/: channelizer.h  dspcommands.h  dspengine.h  fftengine.h  fftsengine.h  fftwengine.h  fftwindow.h  interpolator.h  inthalfbandfilter.h  lowpass.h  movingaverage.h  nco.h  scopevis.h  spectrumvis.h
include-gpl/gui/: glscope.h  glspectrum.h  glspectrumgui.h  glspectrumguismall.h  preferencesdialog.h  scale.h  scopewindow.h  valuedial.h
include-gpl/plugin/: pluginmanager.h
include-gpl/settings/: preferences.h  preset.h  settings.h
include/dsp/: channelmarker.h  samplefifo.h  samplesink.h  threadedsamplesink.h
include/dsp/samplesource/: samplesource.h
include/gui/: basicchannelsettingswidget.h  rollupwidget.h
include/plugin/: pluginapi.h  plugingui.h  plugininterface.h
include/util/: message.h  simpleserializer.h
plugins/: CMakeLists.txt
plugins/channel/: CMakeLists.txt
plugins/channel/nfm/: nfmdemod.cpp  nfmdemod.h  nfmdemodgui.cpp
plugins/channel/tcpsrc/: tcpsrc.cpp  tcpsrc.h  tcpsrcgui.cpp  tcpsrcgui.h  tcpsrcgui.ui
plugins/demod/: CMakeLists.txt
plugins/demod/nfm/: CMakeLists.txt  nfmdemod.cpp  nfmdemod.h  nfmdemodgui.cpp  nfmdemodgui.h  nfmdemodgui.ui  nfmplugin.cpp  nfmplugin.h
plugins/demod/tcpsrc/: tcpsrc.cpp  tcpsrc.h  tcpsrcgui.cpp  tcpsrcgui.h  tcpsrcgui.ui  tcpsrcplugin.cpp
plugins/demod/tetra/: CMakeLists.txt  tetrademod.cpp  tetrademodgui.cpp  tetraplugin.cpp  tetraplugin.h
plugins/samplesource/: CMakeLists.txt
plugins/samplesource/gnuradio/: CMakeLists.txt  gnuradiogui.cpp  gnuradiogui.h  gnuradiogui.ui  gnuradioinput.cpp  gnuradioinput.h  gnuradioplugin.cpp  gnuradioplugin.h  gnuradiothread.cpp  gnuradiothread.h
plugins/samplesource/osmosdr/: CMakeLists.txt  osmosdrgui.cpp  osmosdrgui.h  osmosdrgui.ui  osmosdrinput.cpp  osmosdrinput.h  osmosdrplugin.cpp  osmosdrplugin.h  osmosdrthread.cpp
plugins/samplesource/rtlsdr/: CMakeLists.txt  rtlsdrgui.cpp  rtlsdrgui.h  rtlsdrgui.ui  rtlsdrinput.cpp  rtlsdrinput.h  rtlsdrplugin.cpp  rtlsdrplugin.h
resources/: res.qrc
sdrbase/: mainwindow.cpp  mainwindow.ui
sdrbase/audio/: audiodeviceinfo.cpp  audiofifo.cpp  audiooutput.cpp  portaudioholder.cpp
sdrbase/dsp/: channelizer.cpp  channelmarker.cpp  dspcommands.cpp  dspengine.cpp  fftengine.cpp  fftsengine.cpp  fftwengine.cpp  interpolator.cpp  nco.cpp  pidcontroller.cpp  samplefifo.cpp  scopevis.cpp  spectrumvis.cpp  threadedsamplesink.cpp
sdrbase/gui/: aboutdialog.ui  basicchannelsettingswidget.cpp  basicchannelsettingswidget.ui  glscope.cpp  glspectrum.cpp  glspectrumgui.cpp  glspectrumgui.ui  glspectrumguismall.cpp  glspectrumguismall.ui  indicator.cpp  preferencesdialog.cpp  preferencesdialog.ui  rollupwidget.cpp  scopewindow.cpp  scopewindow.ui  valuedial.cpp
sdrbase/plugin/: pluginapi.cpp  plugingui.cpp  pluginmanager.cpp
sdrbase/resources/: res.qrc
sdrbase/settings/: preferences.cpp  preset.cpp  settings.cpp
sdrbase/util/: message.cpp  miniz.cpp  simpleserializer.cpp
util/: message.cpp  message.h  messagequeue.cpp  messagequeue.h  miniz.cpp  miniz.h
